# Extendead

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAPABILITY_ONTOLOGY.md  DEVELOPER_GUIDE.md  DRAG_CHECKLIST.md  DRAG_FIX.md  DRAG_ROOT_CAUSE.md  README.md  SEMANTIC_PIPELINE.md  STATUS.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md  ui.instructions.md
.github/prompts/: phase-1-build.prompt.md
.github/workflows/: ci.yml
docs/: ACTION_SCHEMA_V1.md  INTERPRETER_ROUTING.md  ONTOLOGY_NEXT.md  START_HERE.md  command-schema.md  failure-semantics.md  golden-tasks.md  macos-verification.md  shell-policy.md  ui-spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: applescript.rs  arbiter.rs  commands.rs  config.rs  errors.rs  events.rs  executor.rs  history.rs  intent_language.rs  intent_ontology.rs  interpret_commands.rs  interpret_local.rs  lib.rs  machine.rs  main.rs  models.rs  modes.rs  native_lexicon.rs  parser.rs  path_policy.rs  permissions.rs  planner.rs  preview.rs  provider_interpreter.rs  provider_keys.rs  resolver.rs  risk.rs  semantic.rs  service_catalog.rs  ui_automation.rs  validator.rs
src/components/: ConfirmationRail.tsx  DeveloperPanel.css  DeveloperPanel.tsx  EventTimeline.tsx  ExpandedConsole.css  ExpandedConsole.tsx  HistoryList.tsx  LoungeStrip.css  LoungeStrip.tsx  PermissionBanner.tsx  RiskBadge.tsx  RouteSelector.tsx  WindowDragHandle.css  WindowDragHandle.tsx
src/core/: api-handler.ts  (+1 more)
(+6 files in other folders)
